Expand the pancakes page
added image, short description and link back to the main page

--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -8,5 +8,11 @@
 
     <body>
         <h1>Pancakes</h1>
+        <img src = "../images/pancakes.jpeg" width="500">
+        <p>
+            This recipe guarantees light, super fluffy pancakes! We’ve been making them for years,
+            so I’ve spent years tweaking the recipe. These are made completely from scratch with ingredients
+            I bet you already have in your kitchen so say goodbye to the boxed pancake mix. These are so much better!</p>
+        <a href = "../index.html">Back To Main</a>
     </body>
 </html>
