--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     
     <body>
         <h1>Odin Recipes</h1>
-        <a href = "./recipes/pancakes.html">Pancakes</a>
+        <ul>
+            <li>
+                <a href = "./recipes/pancakes.html">Pancakes</a>
+            </li>
+            <li>
+                <a href = "./recipes/waffles.html">Waffles</a>
+            </li>
+            <li>
+                <a href = "./recipes/french-toast.html">French Toast</a>
+            </li>
+        </ul>
     </body>
 </html>
