--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -8,7 +8,7 @@
 
     <body>
         <h1>Pancakes</h1>
-        <img src = "../images/pancakes.jpeg" width="500">
+        <img src = "../images/pancakes.jpeg" alt = "delisious pancakes" width="500">
         <p>
             This recipe guarantees light, super fluffy pancakes! We’ve been making them for years,
             so I’ve spent years tweaking the recipe. These are made completely from scratch with ingredients
