Fix all text after first step being italic

--- a/recipes/french-toast.html
+++ b/recipes/french-toast.html
@@ -23,7 +23,7 @@
             </ul>
             <h2>Steps</h2>
             <ol>
-                <li>Heat oven to 200°F (93°C). Line a baking sheet with aluminum foil. Slide the baking sheet into the oven. <i>It is best to make French toast in batches. The warm oven helps keep cooked batches warm while the rest finish cooking.<i></li>
+                <li>Heat oven to 200°F (93°C). Line a baking sheet with aluminum foil. Slide the baking sheet into the oven. <i>It is best to make French toast in batches. The warm oven helps keep cooked batches warm while the rest finish cooking.</i></li>
                 <li>Whisk eggs, milk, cream, vanilla extract, and a pinch of salt together until well blended.</li>
                 <li>Line bread slices up in a large baking dish (it is okay if they overlap). Pour egg mixture over bread slices, then flip and move them around the egg mixture. Move the bread around the egg mixture until the bread has soaked it all up.</li>
                 <li>Melt a tablespoon of butter in a heavy, large pan or griddle over medium-low heat. Working in batches, transfer a few slices of the soaked bread to the pan and cook until golden brown and cooked through, 2 to 3 minutes on each side.</li>
