Add styles to the main page

--- a/index.html
+++ b/index.html
@@ -3,21 +3,25 @@
     <head>
         <title>Odin's Kitchen</title>
         <meta charset = "utf-8">
+        <link rel="stylesheet" href="./styles.css">
     </head>
     
     <body>
         <h1>Odin Recipes</h1>
-        <ul>
-            <li>
-                <a href = "./recipes/pancakes.html">Pancakes</a>
-            </li>
-            <li>
-                <a href = "./recipes/waffles.html">Waffles</a>
-            </li>
-            <li>
-                <a href = "./recipes/french-toast.html">French Toast</a>
-            </li>
-        </ul>
+        <div class="list-card">
+            <h2 class="recipe-heading">Recipe Links</h2>
+            <ul class="recipe-list">
+                <p class = "recipe-link">
+                    <a href = "./recipes/pancakes.html">Pancakes</a>
+                </p class = "recipe-link">
+                <p class = "recipe-link">
+                    <a href = "./recipes/waffles.html">Waffles</a>
+                </p class = "recipe-link">
+                <p class = "recipe-link">
+                    <a href = "./recipes/french-toast.html">French Toast</a>
+                </p class = "recipe-link">
+            </ul>
+        </div>
     </body>
 
     <p>All recipes are kindly stolen from <a href = "https://www.inspiredtaste.net/">https://www.inspiredtaste.net/</a></p>
