Add recipes styles and add them to the pancakes page

--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -4,34 +4,35 @@
     <head>
         <title>Pancakes recipe</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="./recipe-styles.css">
     </head>
 
     <body>
         <h1>Pancakes</h1>
         <img src = "../images/pancakes.jpeg" alt = "delisious pancakes" width="500">
-        <p>
+        <p class="description">
             This recipe guarantees light, super fluffy pancakes! We’ve been making them for years,
             so I’ve spent years tweaking the recipe. These are made completely from scratch with ingredients
             I bet you already have in your kitchen so say goodbye to the boxed pancake mix. These are so much better!</p>
-        <h2>Ingredients</h2>
-        <ul>
-            <li>Flour</li>
-            <li>Sugar</li>
-            <li>Baking powder</li>
-            <li>Milk</li>
-            <li>Egg</li>
-            <li>Butter</li>
-            <li>Vanilla</li>
-        </ul>
+        <div class="ingredients-list">
+            <h2 class="ingredients-heading">Ingredients</h2>
+            <li class="ingredient">Flour</li>
+            <li class="ingredient">Sugar</li>
+            <li class="ingredient">Baking powder</li>
+            <li class="ingredient">Milk</li>
+            <li class="ingredient">Egg</li>
+            <li class="ingredient">Butter</li>
+            <li class="ingredient">Vanilla</li>
+        </div>
         <h2>Steps</h2>
         <ol>
-            <li>Prepare the butter: Melt the butter and set it aside to cool slightly.</li>
-            <li>Combine dry ingredients: In a medium bowl, whisk together the flour, sugar, baking powder, and salt.</li>
-            <li>Combine wet ingredients: In a separate bowl, whisk together the milk, egg, melted butter, and vanilla extract. Don’t worry if the butter solidifies a little.</li>
-            <li>Mix the batter: Create a well in the center of your dry ingredients. Pour the milk mixture into the well and gently whisk until the flour is just incorporated. A few small lumps are perfectly normal. As the batter rests, you should see it begin to bubble. It will be thick, like cake batter. If it seems too thick, add a splash more milk to thin it out.</li>
-            <li>Preheat the skillet: Place a large skillet or griddle over medium heat. To check if it’s ready, sprinkle a few drops of water on the surface. They should “dance” around and evaporate quickly.</li>
-            <li>Cook the pancakes: Brush the skillet with melted butter for crispy edges (you can skip this if using a good nonstick pan). Scoop the batter onto the skillet using a 1/4 cup measure or a large cookie scoop, then gently spread each pancake into a 4-inch circle.</li>
-            <li>Flip the pancakes: After 1 to 2 minutes, the edges will look dry, and bubbles will form and pop on the surface. Flip the pancakes and cook for another 1 to 2 minutes until they’re lightly browned and cooked through. Enjoy your pancakes right away with warm syrup, more butter, and berries.</li>
+            <li class="step">Prepare the butter: Melt the butter and set it aside to cool slightly.</li>
+            <li class="step">Combine dry ingredients: In a medium bowl, whisk together the flour, sugar, baking powder, and salt.</li>
+            <li class="step">Combine wet ingredients: In a separate bowl, whisk together the milk, egg, melted butter, and vanilla extract. Don’t worry if the butter solidifies a little.</li>
+            <li class="step">Mix the batter: Create a well in the center of your dry ingredients. Pour the milk mixture into the well and gently whisk until the flour is just incorporated. A few small lumps are perfectly normal. As the batter rests, you should see it begin to bubble. It will be thick, like cake batter. If it seems too thick, add a splash more milk to thin it out.</li>
+            <li class="step">Preheat the skillet: Place a large skillet or griddle over medium heat. To check if it’s ready, sprinkle a few drops of water on the surface. They should “dance” around and evaporate quickly.</li>
+            <li class="step">Cook the pancakes: Brush the skillet with melted butter for crispy edges (you can skip this if using a good nonstick pan). Scoop the batter onto the skillet using a 1/4 cup measure or a large cookie scoop, then gently spread each pancake into a 4-inch circle.</li>
+            <li class="step">Flip the pancakes: After 1 to 2 minutes, the edges will look dry, and bubbles will form and pop on the surface. Flip the pancakes and cook for another 1 to 2 minutes until they’re lightly browned and cooked through. Enjoy your pancakes right away with warm syrup, more butter, and berries.</li>
         </ol>
         <a href = "../index.html">Back To Main</a>
     </body>
