Add styles to waffles and french toasts pages

--- a/recipes/french-toast.html
+++ b/recipes/french-toast.html
@@ -4,30 +4,31 @@
     <head>
         <title>Waffles</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="./recipe-styles.css">
     </head>
 
     <body>
         <h1>French Toast</h1>
         <img src="../images/french_toast.jpg" alt = "delisious french toast" width="500">
-            <p>
+            <p class="description">
                 This classic French toast has been a weekend tradition in our family for years. While we’ve tried many French toast recipes, we’ve always come back to this one. It’s simple and so delicious.
             </p>
-            <h2>Ingredients</h2>
-            <ul>
-                <li>Bread</li>
-                <li>Eggs</li>
-                <li>Milk</li>
-                <li>Cream</li>
-                <li>Vanilla</li>
-                <li>Butter</li>
-            </ul>
+            <div class="ingredients-list">
+                <h2 class="ingredients-heading">Ingredients</h2>
+                <li class="ingredient">Bread</li>
+                <li class="ingredient">Eggs</li>
+                <li class="ingredient">Milk</li>
+                <li class="ingredient">Cream</li>
+                <li class="ingredient">Vanilla</li>
+                <li class="ingredient">Butter</li>
+            </div>
             <h2>Steps</h2>
             <ol>
-                <li>Heat oven to 200°F (93°C). Line a baking sheet with aluminum foil. Slide the baking sheet into the oven. <i>It is best to make French toast in batches. The warm oven helps keep cooked batches warm while the rest finish cooking.</i></li>
-                <li>Whisk eggs, milk, cream, vanilla extract, and a pinch of salt together until well blended.</li>
-                <li>Line bread slices up in a large baking dish (it is okay if they overlap). Pour egg mixture over bread slices, then flip and move them around the egg mixture. Move the bread around the egg mixture until the bread has soaked it all up.</li>
-                <li>Melt a tablespoon of butter in a heavy, large pan or griddle over medium-low heat. Working in batches, transfer a few slices of the soaked bread to the pan and cook until golden brown and cooked through, 2 to 3 minutes on each side.</li>
-                <li>Transfer cooked French toast to a warm oven while you cook the remaining bread slices. Add additional butter as needed for each batch.</li>
+                <li class="step">Heat oven to 200°F (93°C). Line a baking sheet with aluminum foil. Slide the baking sheet into the oven. <i>It is best to make French toast in batches. The warm oven helps keep cooked batches warm while the rest finish cooking.</i></li>
+                <li class="step">Whisk eggs, milk, cream, vanilla extract, and a pinch of salt together until well blended.</li>
+                <li class="step">Line bread slices up in a large baking dish (it is okay if they overlap). Pour egg mixture over bread slices, then flip and move them around the egg mixture. Move the bread around the egg mixture until the bread has soaked it all up.</li>
+                <li class="step">Melt a tablespoon of butter in a heavy, large pan or griddle over medium-low heat. Working in batches, transfer a few slices of the soaked bread to the pan and cook until golden brown and cooked through, 2 to 3 minutes on each side.</li>
+                <li class="step">Transfer cooked French toast to a warm oven while you cook the remaining bread slices. Add additional butter as needed for each batch.</li>
             </ol>
             <a href = "../index.html">Back To Main</a>
     </body>
