--- a/recipes/waffles.html
+++ b/recipes/waffles.html
@@ -4,35 +4,36 @@
     <head>
         <title>Waffles</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="./recipe-styles.css">
     </head>
 
     <body>
         <h1>Waffles</h1>
         <img src="../images/waffles.jpg" alt = "delisious waffles" width="500">
-            <p>These homemade waffles are a weekend staple for my family. 
+            <p class="description">These homemade waffles are a weekend staple for my family. 
                 Our recipe makes 4 classic waffles (like in the photos) 
                 or 2 to 3 thick, Belgian waffles. 
                 If you need more, no worries, the recipe is easy to double!
             </p>
-            <h2>Ingredients</h2>
-            <ul>
-                <li>Flour</li>
-                <li>Cornstarch</li>
-                <li>Baking Powder</li>
-                <li>Sugar</li>
-                <li>Salt</li>
-                <li>Vanilla</li>
-                <li>Oil</li>
-                <li>Milk</li>
-                <li>Egg</li>
-            </ul>
+            <div class="ingredients-list">
+                <h2 class="ingredients-heading">Ingredients</h2>
+                <li class="ingredient">Flour</li>
+                <li class="ingredient">Cornstarch</li>
+                <li class="ingredient">Baking Powder</li>
+                <li class="ingredient">Sugar</li>
+                <li class="ingredient">Salt</li>
+                <li class="ingredient">Vanilla</li>
+                <li class="ingredient">Oil</li>
+                <li class="ingredient">Milk</li>
+                <li class="ingredient">Egg</li>
+            </div>
             <h2>Steps</h2>
             <ol>
-                <li>Make the batter: In a large bowl, whisk together the flour, cornstarch, salt, baking powder, baking soda, and sugar. In a separate bowl, whisk the buttermilk, oil, and vanilla extract. Whisk the milk mixture into the dry ingredients until only small lumps remain.</li>
-                <li>Let the batter rest: Set the batter aside for 10 to 20 minutes while you prepare the waffle iron.</li>
-                <li>Preheat waffle iron: Heat the waffle iron to the highest setting.</li>
-                <li>Cook them: Brush the iron with melted butter or oil. Pour enough batter to fill the lower grid and cook until they are golden brown and crisp. If they look too dark, turn the heat down slightly</li>
-                <li>Serve: Serve them immediately, or keep them warm and crispy on a rack in a 200°F (93°C) oven until you’re ready to serve. Don’t stack them outside the oven, as they will steam and become soft.</li>
+                <li class="step">Make the batter: In a large bowl, whisk together the flour, cornstarch, salt, baking powder, baking soda, and sugar. In a separate bowl, whisk the buttermilk, oil, and vanilla extract. Whisk the milk mixture into the dry ingredients until only small lumps remain.</li>
+                <li class="step">Let the batter rest: Set the batter aside for 10 to 20 minutes while you prepare the waffle iron.</li>
+                <li class="step">Preheat waffle iron: Heat the waffle iron to the highest setting.</li>
+                <li class="step">Cook them: Brush the iron with melted butter or oil. Pour enough batter to fill the lower grid and cook until they are golden brown and crisp. If they look too dark, turn the heat down slightly</li>
+                <li class="step">Serve: Serve them immediately, or keep them warm and crispy on a rack in a 200°F (93°C) oven until you’re ready to serve. Don’t stack them outside the oven, as they will steam and become soft.</li>
             </ol>
             <a href = "../index.html">Back To Main</a>
     </body>
