Improve page titles for recipes

--- a/recipes/french-toast.html
+++ b/recipes/french-toast.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
     <head>
-        <title>Waffles</title>
+        <title>Odin's Kitchen | French Toast</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="./recipe-styles.css">
     </head>
