--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
     <head>
-        <title>Pancakes recipe</title>
+        <title>Odin's Kitchen | Pancakes</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="./recipe-styles.css">
     </head>
