Improved lists on the main page and recipe pages
Fixed had some bad practices, like paragraphs in unorderred lists

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h1>Odin Recipes</h1>
         <div class="list-card">
             <h2 class="recipe-heading">Recipe Links</h2>
-            <ul class="recipe-list">
+            <div class="recipe-list">
                 <p class = "recipe-link">
                     <a href = "./recipes/pancakes.html">Pancakes</a>
                 </p>
@@ -20,7 +20,7 @@
                 <p class = "recipe-link">
                     <a href = "./recipes/french-toast.html">French Toast</a>
                 </p>
-            </ul>
+            </div>
         </div>
         <p>All recipes are kindly stolen from <a href = "https://www.inspiredtaste.net/">https://www.inspiredtaste.net/</a></p>
     </body>
