--- a/recipes/french-toast.html
+++ b/recipes/french-toast.html
@@ -15,12 +15,12 @@
             </p>
             <div class="ingredients-list">
                 <h2 class="ingredients-heading">Ingredients</h2>
-                <li class="ingredient">Bread</li>
-                <li class="ingredient">Eggs</li>
-                <li class="ingredient">Milk</li>
-                <li class="ingredient">Cream</li>
-                <li class="ingredient">Vanilla</li>
-                <li class="ingredient">Butter</li>
+                <p class="ingredient">• Bread</p>
+                <p class="ingredient">• Eggs</p>
+                <p class="ingredient">• Milk</p>
+                <p class="ingredient">• Cream</p>
+                <p class="ingredient">• Vanilla</p>
+                <p class="ingredient">• Butter</p>
             </div>
             <h2>Steps</h2>
             <ol>
