--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -16,13 +16,13 @@
             I bet you already have in your kitchen so say goodbye to the boxed pancake mix. These are so much better!</p>
         <div class="ingredients-list">
             <h2 class="ingredients-heading">Ingredients</h2>
-            <li class="ingredient">Flour</li>
-            <li class="ingredient">Sugar</li>
-            <li class="ingredient">Baking powder</li>
-            <li class="ingredient">Milk</li>
-            <li class="ingredient">Egg</li>
-            <li class="ingredient">Butter</li>
-            <li class="ingredient">Vanilla</li>
+            <p class="ingredient">• Flour</p>
+            <p class="ingredient">• Sugar</p>
+            <p class="ingredient">• Baking powder</p>
+            <p class="ingredient">• Milk</p>
+            <p class="ingredient">• Egg</p>
+            <p class="ingredient">• Butter</p>
+            <p class="ingredient">• Vanilla</p>
         </div>
         <h2>Steps</h2>
         <ol>
