--- a/recipes/waffles.html
+++ b/recipes/waffles.html
@@ -17,15 +17,15 @@
             </p>
             <div class="ingredients-list">
                 <h2 class="ingredients-heading">Ingredients</h2>
-                <li class="ingredient">Flour</li>
-                <li class="ingredient">Cornstarch</li>
-                <li class="ingredient">Baking Powder</li>
-                <li class="ingredient">Sugar</li>
-                <li class="ingredient">Salt</li>
-                <li class="ingredient">Vanilla</li>
-                <li class="ingredient">Oil</li>
-                <li class="ingredient">Milk</li>
-                <li class="ingredient">Egg</li>
+                <p class="ingredient">• Flour</p>
+                <p class="ingredient">• Cornstarch</p>
+                <p class="ingredient">• Baking Powder</p>
+                <p class="ingredient">• Sugar</p>
+                <p class="ingredient">• Salt</p>
+                <p class="ingredient">• Vanilla</p>
+                <p class="ingredient">• Oil</p>
+                <p class="ingredient">• Milk</p>
+                <p class="ingredient">• Egg</p>
             </div>
             <h2>Steps</h2>
             <ol>
